--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<h2>Hola!</h2>
+					<h3>05 de Diciembre de 2020, Córdoba, Argentina</h3>
+					<p>Te invitamos a celebrar nuestra boda</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
