--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 					<div class="groom">
 						<img src="images/groom.jpg" alt="groom" class="img-responsive">
 					</div>
-					<div class="desc-groom">
+					<div class="desc-groom"><samp></samp>
             <h3>Daniel Prieto</h3>
-						<p>Nacido en Tierra del Fuego, este joven se dirigió a Cordoba en busqueda de cumplir con sus sueños. Agregar mas cosas aca. </p>
+						<p>Nacido en Tierra del Fuego, este joven se dirige a Cordoba en busqueda de sus sueños. En el camino no esperaba encontrarse con una de las aventuras mas sorprendentes para él.</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -150,7 +150,7 @@
 					</div>
 					<div class="desc-bride">
             <h3>Brenda Deparsia</h3>
-						<p>Desde la tierra porteña hacia San Luis, y de San Luis hacia Córdoba. Ese fue el recorrido de esta jovencita hasta encontrarse con una de sus decisiones mas importantes. </p>
+						<p>Desde la tierra porteña hacia San Luis, y de San Luis hacia Córdoba. Ese fue el recorrido de esta joven hasta encontrarse con una de sus decisiones mas importantes. </p>
 					</div>
 				</div>
 			</div>
