--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Daniel Prieto</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -42,9 +42,11 @@
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
-	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
-		      </div>		      
+	   		<!-- 
+			<div class="logo">
+		         <a href="index.html">DP</a>
+			</div>		      
+			-->
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
@@ -53,8 +55,7 @@
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>					
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -73,12 +74,12 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
+	   			<h5>Hello World</h5>
 	   			<h1>I'm Daniel Prieto.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Firmware Developer</span>
 					<span>Electronic Engineer</span>
+	   				<span>Firmware Developer</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -89,7 +90,7 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="facebook.com/dprieto94"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://www.facebook.com/dprieto94" target="_blank"><i class="fa fa-facebook"></i></a></li>
          <li><a href=""><i class="fa fa-twitter"></i></a></li>
          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
       </ul> <!-- /intro-social -->      	
@@ -111,10 +112,12 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">I am a Electronic Engineer, I have a strong passion for the programming and the electronics systems. 
+					   I am a person who knows how to face new problems, seeking excellence in every detail. 
+					   I am an enthusiastic person, I don't like to let the days go by without learning something new.
+					   </p>
    			</div>   			
-
-   		</div>   		
+   		</div>   	
    	</div> <!-- /section-intro -->
 
    	<div class="row about-content">
@@ -122,28 +125,29 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p> Now i will be a little bit more technical, my principal tools are C/C++ due to the years developing Firmware for Embbeded Systems.
+				I started with Microchip microcontrollers, then i learned (and also teach) Arduino!, but now i'm developing with NXP uC. 
+				
+				Currently, I am studying Data Science in the university (UTN), 
+				where I am perfecting my knowledge in Python and AI.
+				 I am constantly looking for challenges and a new knowledges. </p>
 
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Daniel Alberto Prieto</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>August 31, 1994</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
-   				</li>
-   				<li>
-   					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>Firmware Developer at Feas Electronica</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>prietodaniel1@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -153,29 +157,33 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Here you can see a list of my best Skills: </p>
 
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>C/C++</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
+				   	<div class="progress percent75"><span>75%</span></div>
+				   	<strong>RTOS</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>Python</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<div class="progress percent65"><span>65%</span></div>
+				   	<strong>SQL</strong>
 				   </li>
+				   <li>
+					<div class="progress percent80"><span>80%</span></div>
+					<strong>Matlab</strong>
+					</li>
 				   <li>
 
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<strong>HTML, CSS and Js</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -300,13 +308,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Data Science Diploma</h3>
+	   					<p>April 2020 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>Universidad Tecnológica Nacional</h4>
+	   					<p>Usage of Anaconda's Enviroment with python and different libraries to make predictions in datasets. We study IA and the fields its involve (EDA, Machine Learnin, Deep Learning, Vision Computer).</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -319,12 +327,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<p>March 2012 - December 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Universidad Tecnológica Nacional</h4>
+	   					<p>I become a professional who is trained and qualified to face with solvency the planning, development, direction and control of electronic systems. Able to research and develop projects, integrating interdisciplinary teams for this purpose. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -336,13 +344,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
+	   					<h3>High School Diploma</h3>
 	   					<p>May 2013 - June 2014</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>CPET N° 1 Río Grande</h4>
+	   					<p></p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -607,33 +615,6 @@
    	</div> <!-- /portfolio-content --> 
 		
 	</section> <!-- /portfolio --> 
-
-
-	<!-- CTA Section
-   ================================================== -->
-	<section id="cta" class="grey-section">
-
-   	<div class="row cta-content">
-
-   		<div class="col-twelve section-ads">  
-
-	     		<h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends Dreamhost.</a></h2>
-
-		      <p class="lead">
-		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
-				</p>
-
-				<div class="action">
-			      <a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
-		      </div>		     	
-
-   		</div>
-
-   	</div> <!-- /cta-content -->
-
-   </section> <!-- /cta --> 
 
 	
 	<!-- services Section
