--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 
    		<div class="col-six tab-full">
 
-   			<h3>Profile</h3>
-   			<p> Now i will be a little bit more technical, my principal tools are C/C++ due to the years developing Firmware for Embbeded Systems.
+   			<h3>Technical Profile</h3>
+   			<p> For programming, my principal tools are C/C++ due to the years developing Firmware for Embbeded Systems.
 				I started with Microchip microcontrollers, then i learned (and also teach) Arduino!, but now i'm developing with NXP uC. 
-				
+				My favourites circuits designers are Altium and Kicad, and for simulate circuits I use Orcad Pspice. 
 				Currently, I am studying Data Science in the university (UTN), 
 				where I am perfecting my knowledge in Python and AI.
 				 I am constantly looking for challenges and a new knowledges. </p>
